--- a/.hintrc
+++ b/.hintrc
@@ -24,6 +24,16 @@
         "list": "off",
         "listitem": "off"
       }
+    ],
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "text-align: -webkit-match-parent",
+          "-webkit-text-size-adjust",
+          "-webkit-tap-highlight-color"
+        ]
+      }
     ]
   }
 }
